@@ -1,7 +1,0 @@
-.mce-menu {
-	text-align: left;
-}
-.mce-btn button {
-	min-width: 10px;
-	text-align: left;
-}
